# cswrap

./: .gitignore  .packit.yaml  .travis.yml  CMakeLists.txt  Makefile  README  abscc.c  csexec-loader.c  csexec-preload.c  csexec.c  cswrap-util.c  cswrap-util.h  cswrap.c  cswrap.txt  make-srpm.sh  upload-release.sh
.github/workflows/: ci.yml  coverity.yml
doc/: CMakeLists.txt  csexec.adoc  cswrap.adoc
src/: CMakeLists.txt  csexec-loader-aarch64.c  csexec-loader-common.c  csexec-loader-ppc64le.c  csexec-loader-s390x.c  csexec-loader-x86_64.c  csexec-preload.c  csexec.c  cswrap-util.c  cswrap-util.h  cswrap.c  lsan.supp
tests/: CMakeLists.txt  testlib.sh
tests/0000-static-build/: runtest.sh
tests/0001-relpath-to-abspath/: runtest.sh
tests/0002-append-tool-suffix/: runtest.sh
tests/0003-direct-invocation/: runtest.sh
tests/0004-exit-status-and-signals/: runtest.sh
tests/0005-cap-file-locking/: runtest.sh
tests/0006-add-del-cflags/: runtest.sh
tests/0007-clang-notes-filtering/: clang++--analyze-stderr.txt  clang++-c-cswrap.out  clang++-c-stderr.txt  clang--analyze-stderr.txt  clang-c-cswrap.out  clang-c-stderr.txt  gcc--analyze-stderr.txt  gcc-c-cswrap.out  input.err  runtest.sh
tests/0008-csexec-basic/: runtest.sh  stdout.txt  test.c  wrap.sh
tests/0009-csexec-argv0/: runtest.sh  stdout.txt  test.c
tests/0010-csexec-readlink/: runtest.sh  test.c
